<resources>
    <string name="app_name">FamilyHealth</string>
    <string name="author">wyp</string>
    <string name="id">账号</string>
    <string name="user_name">用户名</string>
    <string name="self">自己</string>
    <string name="family_member">成员</string>
    <string name="project">项目</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="login">登&#160;&#160;&#160;&#160;陆</string>
    <string name="register">注&#160;&#160;&#160;&#160;册</string>
    <string name="password">密&#160;&#160;&#160;&#160;码</string>
    <string name="password_digits">0123456789qwertyuiopasdfghjklzxcvbnm</string>
    <string name="phone_digits">0123456789+</string>
    <string name="path">显示轨迹</string>
    <string name="change_password">更改密码</string>
    <string name="forget">忘记密码</string>
    <string name="new_password">新密码</string>
    <string name="phone">手机号</string>
    <string name="health_data">健康数据</string>
    <string name="med_clock">药盒闹钟</string>
    <string name="check_data">查看数据</string>
    <string name="this_time">本次</string>
    <string name="week">一周</string>
    <string name="month">一月</string>
    <string name="year">一年</string>
    <string name="up_data">上传数据</string>
    <string name="up_common">手动上传</string>
    <string name="number">数值</string>
    <string name="input">点击输入</string>
    <string name="up_auto">仪器上传</string>
    <string name="up_hint">提示信息</string>
    <string name="up_choose">选择设备</string>
    <string name="up_link">连接设备</string>
    <string name="clock">事件提醒</string>
    <string name="clock_add">添加闹钟</string>
    <string name="time">时间&#160;&#160;|</string>
    <string name="med">药名</string>
    <string name="repeat">重复</string>
    <string name="type">类型</string>
    <string name="event">事件</string>
    <string name="health_tip">健康知识</string>
    <string name="positon">位置信息</string>
    <string name="call">紧急呼叫</string>
    <string name="set">用户设置</string>
    <string name="save_tip">切换项目记得打勾保存哦</string>
    <integer name="title_icon">0</integer>
    <integer name="title_text">1</integer>
    <integer name="title_none">2</integer>
    <integer name="title_back_spinner">3</integer>
    <integer name="title_back">4</integer>
    <integer name="title_back_text">5</integer>
    <string name="add">+</string>
</resources>
