<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.msi.familyhealth.View.TitleView
        android:id="@+id/clock_titleView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:background_color="@color/c2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/clock"
        app:right_text="@string/family_member"
        app:title_type="@integer/title_back_spinner" />

    <com.example.msi.familyhealth.View.OneListView
        android:id="@+id/clock_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/clock_titleView">

    </com.example.msi.familyhealth.View.OneListView>

    <Button
        android:id="@+id/clock_add"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/up_circle_bt"
        android:gravity="center"
        android:text="@string/add"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>