<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.msi.familyhealth.View.TitleView
        android:id="@+id/login_titleView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/login"
        app:title_type="@integer/title_none" />

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_titleView" />

    <TextView
        android:id="@+id/forget_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/forget"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_titleView" />

    <TextView
        android:id="@+id/login_username_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/user_name"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_username_ed" />

    <EditText
        android:id="@+id/login_username_ed"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:background="@color/loginYellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_username_tv"
        app:layout_constraintTop_toBottomOf="@+id/login_titleView" />

    <TextView
        android:id="@+id/login_password_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/password"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_password_ed" />

    <EditText
        android:id="@+id/login_password_ed"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@color/loginGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_password_tx"
        app:layout_constraintTop_toBottomOf="@+id/login_username_ed" />

    <TextView
        android:id="@+id/login_phone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/phone"
        android:textSize="20dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_phone_ed" />

    <EditText
        android:id="@+id/login_phone_ed"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@color/loginLightGreen"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_phone_tv"
        app:layout_constraintTop_toBottomOf="@+id/login_password_ed" />

    <Button
        android:id="@+id/bottom_bt"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/loginYellow"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
