<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.msi.familyhealth.View.TitleView
        android:id="@+id/data_titleView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:background_color="@color/c1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/up_data"
        app:title_type="@integer/title_icon" />

    <android.support.v4.view.ViewPager
        android:id="@+id/data_vp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_titleView">

    </android.support.v4.view.ViewPager>

    <TextView
        android:id="@+id/save_tip_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/save_tip"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/up_common_rb"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/radiobutton_background"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/up_common"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/up_auto_rb"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/radiobutton_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/up_auto"
            android:textSize="20dp" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>